# lidar-room-mapper

./: .gitignore  README.md  pyproject.toml
config/: camera_intrinsics_pi_camera_v2_1920x1080.json  rig_geometry.json
data/: sample_scan.jsonl
deploy/: lidar-room-mapper.service
docs/: ARCHITECTURE.md  HARDWARE_SETUP.md  INTERVIEW_GUIDE.md  LIDAR_CAMERA_CALIBRATION.md  ROADMAP.md
scripts/: install_pi.sh
src/lidar_room_mapper/: __init__.py  cli.py  config.py  models.py  runtime.py
src/lidar_room_mapper/dashboard/: server.py
src/lidar_room_mapper/dashboard/static/: app.js  index.html  styles.css
src/lidar_room_mapper/fusion/: __init__.py  projection.py
src/lidar_room_mapper/mapping/: __init__.py  export.py  occupancy.py  scan_matcher.py
src/lidar_room_mapper/perception/: __init__.py  clearance.py
src/lidar_room_mapper/sensors/: __init__.py  camera.py  lidar.py
tests/: test_camera_recorder.py  test_clearance.py  test_export.py  test_occupancy.py  test_projection.py  test_replay.py  test_rplidar_protocol.py  test_runtime_fusion.py  test_scan_matcher.py
